# ai-simultaneous-interpretation-assistant

./: .env.example  .gitignore  ADVISOR_REVIEW.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
assets/demo/: demo-script.en.txt
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/providers/: __init__.py  base.py  factory.py  faster_whisper_provider.py  mock.py  openai_compatible.py
backend/app/services/: audio_stream.py  demo_stream.py  exporter.py  provider_diagnostics.py  subtitle_state.py  summarizer.py
backend/app/tests/: test_health.py
docs/: advisor-review.md  architecture.md  competition-audit.md  demo-material.md  demo-script.md  demo-video-plan.md  deployment.md  pr-plan.md  submission-checklist.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: config.ts  main.tsx  styles.css
scripts/: check.ps1  demo-video-requirements.txt  download-demo-video.ps1  generate-demo-audio.ps1  generate-demo-video.py  pre-submit-audit.ps1  runtime_smoke.py  smoke-single-service.ps1  start-dev.ps1  stop-dev.ps1
