[project]
name = "translate-english-backend"
version = "0.1.0"
description = "FastAPI backend for an AI simultaneous interpretation assistant."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]
ai = [
  "faster-whisper>=1.1.0"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
